--- a/app/templates/configuracion/emisor.html
+++ b/app/templates/configuracion/emisor.html
@@ -828,7 +828,9 @@ document.addEventListener("DOMContentLoaded", () => {
   cargarCertificado();
 });
 </script>
-    
+    <!-- ========================================================= -->
+    <!-- SCRIPT PREVIEW NUMERACIÓN SIMPLE -->
+    <!-- ========================================================= -->    
     <script>
       document.addEventListener("DOMContentLoaded", () => {
         const inputPlantilla = document.getElementById("plantilla-input");
