--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -16,6 +16,7 @@
     />
 
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>{{ title or "Facturación" }}</title>
 
     <link href="/static/style.css" rel="stylesheet" />
