--- a/app/static/style.css
+++ b/app/static/style.css
@@ -368,3 +368,9 @@ body.mobile .py-4 {
   padding-top: 12px !important;
   padding-bottom: 12px !important;
 }
+body.mobile #layout-wrapper {
+  display: block !important;
+}
+
+/* ============================================
+   FIN STYLE.CSS
