--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -65,12 +65,13 @@
   </head>
 
   <body
-    class="bg-gray-100 text-gray-900 flex relative overflow-x-hidden overflow-y-auto min-h-screen"
+    class="bg-gray-100 text-gray-900 relative overflow-x-hidden overflow-y-auto min-h-screen"
   >
     <!-- DECOR -->
     <div
       class="absolute -top-28 -left-36 w-[500px] h-[500px] bg-gradient-to-br from-blue-500 via-indigo-500 to-purple-600 rounded-full blur-3xl opacity-30"
     ></div>
+  <div id="layout-wrapper" class="flex">
 
     <!-- ====================== SIDEBAR ====================== -->
     <aside
@@ -123,7 +124,7 @@
         </div>
       </nav>
     </aside>
-
+    <div class="flex-1 relative z-10">
     <!-- ====================== CONTENIDO + HEADER ====================== -->
     <div class="flex-1 relative z-10">
       <!-- ===== HEADER SUPERIOR ===== -->
