--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -166,6 +166,13 @@
           >
             Iniciar sesión
           </a>
+
+          <a
+            href="/registro"
+            class="px-4 py-2 rounded-lg bg-green-600 text-white font-semibold hover:bg-green-700 shadow"
+          >
+            Registrarse
+          </a>
           {% endif %}
         </header>
 
