--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -69,7 +69,7 @@
         <nav class="flex flex-col space-y-3 relative z-10">
           {% if request.url.path != '/dashboard' %}
           <a href="/dashboard" class="nav-link">Dashboard</a>
-          {% if u and u.rol == "admin" %}
+          {% endif %} {% if u and u.rol == "admin" %}
           <a href="/usuarios" class="nav-link">Usuarios</a>
           {% endif %}
 
