--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -44,6 +44,7 @@
     <div
       class="absolute -top-28 -left-36 w-[500px] h-[500px] bg-gradient-to-br from-blue-500 via-indigo-500 to-purple-600 rounded-full blur-3xl opacity-30"
     ></div>
+    {% set u = get_user(request) %}
 
     <!-- ======================= LAYOUT ======================= -->
     <div id="layout-wrapper" class="flex">
@@ -78,7 +79,6 @@
           <a href="/facturas" class="nav-link">Facturas</a>
           <a href="/informes" class="nav-link">Informes y Exportación</a>
           <a href="/auditoria" class="nav-link">Auditoría</a>
-
           <div class="relative mt-4 select-none" id="configMenu">
             <div
               id="configBtn"
@@ -123,8 +123,7 @@
           </div>
 
           <!-- Usuario -->
-          {% set u = get_user(request) %} {% if u %} {% set logo =
-          get_emisor_logo() %}
+          {% if u %} {% set logo = get_emisor_logo() %}
 
           <div class="flex items-center gap-4">
             <div class="text-end">
